# ioBroker.modbus-codesys

./: Cargo.toml  LICENSE  README.md
src/: ioBroker-modbus-codesys-convert-latest.sh  main.rs
test/: inputs-out.csv  ioBroker-modbus-codesys-test.sh  ioBroker.modbus-codesys.SYM_XML  ioBroker.modbus-codesys.SYM_XML-holdings-out.csv  ioBroker.modbus-codesys.pro
